force-app/main/default/objects/AAR_Submission__c/AAR_Submission__c.object-meta.xml
<CustomObject>
    <description
  >Stores evaluator assessments (score, comments, recommendation) for a submitted AAR. One record per evaluator per AAR.</description>
    <label>AAR Submission</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>