force-app/main/default/objects/AAR_Submission__c/fields/AAR_Record__c.field-meta.xml
<CustomField>
    <fullName>AAR_Record__c</fullName>
    <label>AAR Record</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>AAR Submissions</relationshipLabel>
    <relationshipName>AAR_Submissions</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>