force-app/main/default/objects/AAR_Submission__c/fields/Clinical_Duties__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Duties__c</fullName>
    <label>Clinical Duties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>