force-app/main/default/objects/AAR_Submission__c/fields/CMaRS_Updated__c.field-meta.xml
<CustomField>
    <fullName>CMaRS_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMaRS Disclosure Updated</label>
    <type>Checkbox</type>
</CustomField>