force-app/main/default/objects/AAR_Submission__c/fields/Evaluator_Comments__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Comments__c</fullName>
    <label>Evaluator Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>