force-app/main/default/objects/AAR_Submission__c/fields/Evaluator_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Recommendation__c</fullName>
    <label>Evaluator Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Revise</fullName>
                <label>Revise and Resubmit</label>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>