force-app/main/default/objects/AAR_Submission__c/fields/Evaluator_Score__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Score__c</fullName>
    <label>Evaluator Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>