force-app/main/default/objects/AAR_Submission__c/fields/Form_Confirmed_Accurate__c.field-meta.xml
<CustomField>
    <fullName>Form_Confirmed_Accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Confirmed Accurate</label>
    <type>Checkbox</type>
</CustomField>