force-app/main/default/objects/AAR_Submission__c/fields/Grants_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>Grants_Good_Standing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grants in Good Standing</label>
    <type>Checkbox</type>
</CustomField>