force-app/main/default/objects/AAR_Submission__c/fields/Hours_Completing_AAR__c.field-meta.xml
<CustomField>
    <fullName>Hours_Completing_AAR__c</fullName>
    <label>Hours Completing AAR</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>