force-app/main/default/objects/AAR_Submission__c/fields/Krembil_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Krembil_Pillar__c</fullName>
    <label>Krembil Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brain &amp; Spinal Cord</fullName>
            </value>
            <value>
                <fullName>Arthritis</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Neurosciences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>