force-app/main/default/objects/AAR_Submission__c/fields/PI_Narrative__c.field-meta.xml
<CustomField>
    <fullName>PI_Narrative__c</fullName>
    <label>PI Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>