force-app/main/default/objects/AAR_Submission__c/fields/Protected_Time_Research__c.field-meta.xml
<CustomField>
    <fullName>Protected_Time_Research__c</fullName>
    <label>Protected Time for Research (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>