force-app/main/default/objects/AAR_Submission__c/fields/Research_Admin__c.field-meta.xml
<CustomField>
    <fullName>Research_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AAR Submissions</relationshipLabel>
    <relationshipName>AAR_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>