force-app/main/default/objects/AAR_Submission__c/fields/Research_Career_Stage__c.field-meta.xml
<CustomField>
    <fullName>Research_Career_Stage__c</fullName>
    <label>Research Career Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Career</fullName>
            </value>
            <value>
                <fullName>Mid Career</fullName>
            </value>
            <value>
                <fullName>Senior Career</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>