force-app/main/default/objects/AAR_Submission__c/fields/Research_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Research_Keywords__c</fullName>
    <label>Research Keywords</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Genomics</fullName>
            </value>
            <value>
                <fullName>Stem Cell Biology</fullName>
            </value>
            <value>
                <fullName>Clinical Research</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>