force-app/main/default/objects/AAR_Submission__c/fields/Scientist__c.field-meta.xml
<CustomField>
    <fullName>Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scientist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AAR Submissions (Scientist)</relationshipLabel>
    <relationshipName>AAR_Submissions_Scientist</relationshipName>
    <type>Lookup</type>
</CustomField>