force-app/main/default/objects/AAR_Submission__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AAR Submissions</relationshipLabel>
    <relationshipName>AAR_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>