force-app/main/default/objects/AAR_Submission__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <label>Submission Date/Time</label>
    <type>DateTime</type>
</CustomField>