force-app/main/default/objects/AAR_Submission__c/validationRules/Block_Submit_Grants_Not_Standing.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Submit_Grants_Not_Standing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, 'Submitted'),
  NOT(Grants_Good_Standing__c)
)</errorConditionFormula>
    <errorMessage
  >All grant accounts must be in good standing before submission.</errorMessage>
    <errorDisplayField>Grants_Good_Standing__c</errorDisplayField>
</ValidationRule>