force-app/main/default/objects/AAR_Submission__c/validationRules/Block_Submit_No_CMaRS.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Submit_No_CMaRS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, 'Submitted'),
  NOT(CMaRS_Updated__c)
)</errorConditionFormula>
    <errorMessage
  >Your CMaRS relationship disclosure must be updated before submission.</errorMessage>
    <errorDisplayField>CMaRS_Updated__c</errorDisplayField>
</ValidationRule>