force-app/main/default/objects/AAR_Submission__c/validationRules/Block_Submit_No_MyLearning.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Submit_No_MyLearning</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, 'Submitted'),
  NOT(Mandatory_Training_Complete__c)
)</errorConditionFormula>
    <errorMessage
  >MyLearning training must be completed before you can submit your AAR.</errorMessage>
    <errorDisplayField>Mandatory_Training_Complete__c</errorDisplayField>
</ValidationRule>