force-app/main/default/objects/AAR_Submission__c/validationRules/Block_Submit_Not_Confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Submit_Not_Confirmed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, 'Submitted'),
  NOT(Form_Confirmed_Accurate__c)
)</errorConditionFormula>
    <errorMessage
  >Please confirm the form is accurate before submitting.</errorMessage>
    <errorDisplayField>Form_Confirmed_Accurate__c</errorDisplayField>
</ValidationRule>