force-app/main/default/objects/AAR_Submission__c/validationRules/VR_Evaluator_Assessment_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Evaluator_Assessment_Status</fullName>
    <active>true</active>
    <description
  >Prevents evaluators from entering or changing assessment data (score, comments) unless the linked AAR is in Submitted status.</description>
    <errorConditionFormula>AND(
    $Permission.AAR_Evaluator,
    OR(
        ISCHANGED(Evaluator_Score__c),
        ISCHANGED(Evaluator_Comments__c)
    ),
    NOT(ISPICKVAL(AAR_Record__r.Status__c, &quot;Submitted&quot;))
)</errorConditionFormula>
    <errorMessage
  >Evaluator assessment can only be completed for Submitted AARs.</errorMessage>
</ValidationRule>